--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".RegisterActivity"
-    >
+    tools:context=".RegisterActivity">
 
     <EditText
         android:id="@+id/txtFieldEmail"
@@ -33,5 +32,21 @@
         android:text="Register"
         android:textSize="22dp"
         android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:gravity="end">
+
+        <TextView
+            android:id="@+id/txtSignIn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sign In"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
 
 </LinearLayout>
