Login and Register validation added

--- a/app/src/main/res/drawable/login_background_color.xml
+++ b/app/src/main/res/drawable/login_background_color.xml
@@ -6,6 +6,6 @@
     <gradient
         android:angle="270"
         android:endColor="@color/white"
-        android:startColor="#0F9D58" />
+        android:startColor="#3F51B5" />
 
 </shape>
