--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,18 +9,15 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnLogOut"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="Login" />
-
-    <Button
-        android:id="@+id/btnRegister"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="Register" />
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="40dp"
+        android:paddingVertical="10dp"
+        android:text="Log Out"
+        android:textSize="22dp"
+        android:textStyle="bold" />
 
 
 </LinearLayout>
